--- a/index.css
+++ b/index.css
@@ -1,13 +1,13 @@
 @font-face {
     font-family: "oppo-sans";
-    src: url("font/OPPOSans-L.ttf");
+    src: url("font/OPPOSans-R.ttf");
 }
 
 *{
     margin: 0;
     border: none;
     text-align: unset;
-    font-family: "oppo-sans";
+    font: 1em "oppo-sans";
     color: #9e9e9e;
 }
 
