--- a/index.css
+++ b/index.css
@@ -79,6 +79,32 @@ body{
     display: block;
 }
 
+.setting{
+    position: absolute;
+    bottom:15px;
+    right:65px;
+    width: 255px;
+    height: 69px;
+    padding: 15px 15px;
+    margin: 20px 10px 20px 26px;
+    border-radius: 20px;
+    background: #FFFFFF;
+    box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.3);
+    display: none;
+}
+
+.setting>input{
+    border-bottom: 1px solid #9e9e9e;
+    width:150px;
+}
+
+.setting>button{
+    position: absolute;
+    right:18px;
+    bottom: 10px;
+    background-color: #FFFFFF;
+}
+
 #result{
     width: 364px;
     height: 280px;
